gui: Fix content vertical overflow
  Prevent content from vertically overflowing in main window tabs and
  show a vertical scrollbar only when necessary (i.e. in Recent list
  when we have more files to display than the available vertical space
  can fit).

--- a/gui/styles/_two_panes.styl
+++ b/gui/styles/_two_panes.styl
@@ -105,6 +105,7 @@
   flex 1 0
   display flex
   flex-direction column
+  overflow-y auto
 
 .two-panes__menu
   @extend $tabs-base .coz-tab-list
